# voice-stream-webrtc-add-on

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.yaml  config.json  generate_lan_cert.sh  repository.json  setup_and_run.sh
.github/workflows/: build.yaml
rootfs/etc/services.d/webrtc/: run
src/: audio_server.rs  handlers.rs  main.rs  messages.rs  state.rs  webrtc_manager.rs
