[package]
name = "webrtc_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
webrtc = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
dashmap = "5.5"
base64 = "0.21"
lazy_static = "1.4"